// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Mui-Recharts Area Dark 1`] = `
<div
  className="recharts-wrapper makeStyles-rootChart-4"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "cursor": "default",
      "height": 575,
      "position": "relative",
      "width": 1572,
    }
  }
>
  <svg
    className="recharts-surface"
    height={575}
    version="1.1"
    viewBox="0 0 1572 575"
    width={1572}
  >
    <defs>
      <clipPath
        id="recharts18-clip"
      >
        <rect
          height={535}
          width={1502}
          x={65}
          y={5}
        />
      </clipPath>
    </defs>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={30}
        stroke="#666"
        width={1502}
        x={65}
        x1={65}
        x2={1567}
        y={540}
        y1={540}
        y2={540}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={65}
            x2={65}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={65}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={65}
            >
              Page A
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={315.33333333333337}
            x2={315.33333333333337}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={315.33333333333337}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={315.33333333333337}
            >
              Page B
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={565.6666666666667}
            x2={565.6666666666667}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={565.6666666666667}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={565.6666666666667}
            >
              Page C
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={816}
            x2={816}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={816}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={816}
            >
              Page D
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1066.3333333333335}
            x2={1066.3333333333335}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1066.3333333333335}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1066.3333333333335}
            >
              Page E
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1316.6666666666667}
            x2={1316.6666666666667}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1316.6666666666667}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1316.6666666666667}
            >
              Page F
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1567}
            x2={1567}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1567}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1567}
            >
              Page G
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={535}
        stroke="#666"
        width={60}
        x={5}
        x1={65}
        x2={65}
        y={5}
        y1={5}
        y2={540}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={540}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={540}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              0
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={406.25}
            y2={406.25}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={406.25}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              2500
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={272.5}
            y2={272.5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={272.5}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              5000
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={138.75}
            y2={138.75}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={138.75}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              7500
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={5}
            y2={5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={5}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              10000
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-area"
    >
      <g
        className="recharts-layer"
      >
        <defs>
          <clipPath
            id="animationClipPath-recharts-area-19"
          >
            <rect
              height={541}
              width={0}
              x={65}
              y={0}
            />
          </clipPath>
        </defs>
        <g
          className="recharts-layer"
          clipPath="url(#animationClipPath-recharts-area-19)"
        >
          <g
            className="recharts-layer"
            clipPath={null}
          >
            <path
              className="recharts-curve recharts-area-area"
              d="M65,411.59999999999997L315.33333333333337,465.207L565.6666666666667,15.70000000000001L816,330.92199999999997L1066.3333333333335,283.2L1316.6666666666667,336.7L1567,309.95L1567,540L1316.6666666666667,540L1066.3333333333335,540L816,540L565.6666666666667,540L315.33333333333337,540L65,540Z"
              fill="#8884d8"
              fillOpacity={0.6}
              height={535}
              stroke="none"
              width={1502}
            />
            <path
              className="recharts-curve recharts-area-curve"
              d="M65,411.59999999999997L315.33333333333337,465.207L565.6666666666667,15.70000000000001L816,330.92199999999997L1066.3333333333335,283.2L1316.6666666666667,336.7L1567,309.95"
              fill="none"
              fillOpacity={0.6}
              height={535}
              stroke="#8884d8"
              width={1502}
            />
          </g>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-area"
    >
      <g
        className="recharts-layer"
      >
        <defs>
          <clipPath
            id="animationClipPath-recharts-area-20"
          >
            <rect
              height={541}
              width={0}
              x={65}
              y={0}
            />
          </clipPath>
        </defs>
        <g
          className="recharts-layer"
          clipPath="url(#animationClipPath-recharts-area-20)"
        >
          <g
            className="recharts-layer"
            clipPath={null}
          >
            <path
              className="recharts-curve recharts-area-area"
              d="M65,326L315.33333333333337,379.5L565.6666666666667,433L816,391.27L1066.3333333333335,438.88499999999993L1316.6666666666667,412.135L1567,353.285L1567,540L1316.6666666666667,540L1066.3333333333335,540L816,540L565.6666666666667,540L315.33333333333337,540L65,540Z"
              fill="#82ca9d"
              fillOpacity={0.6}
              height={535}
              stroke="none"
              width={1502}
            />
            <path
              className="recharts-curve recharts-area-curve"
              d="M65,326L315.33333333333337,379.5L565.6666666666667,433L816,391.27L1066.3333333333335,438.88499999999993L1316.6666666666667,412.135L1567,353.285"
              fill="none"
              fillOpacity={0.6}
              height={535}
              stroke="#82ca9d"
              width={1502}
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <div
    className="recharts-tooltip-wrapper"
    style={
      Object {
        "MozTransform": "translate(undefinedpx, undefinedpx)",
        "OTransform": "translate(undefinedpx, undefinedpx)",
        "WebkitTransform": "translate(undefinedpx, undefinedpx)",
        "msTransform": "translate(undefinedpx, undefinedpx)",
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
        "transform": "translate(undefinedpx, undefinedpx)",
        "visibility": "hidden",
      }
    }
  >
    <div
      className="recharts-default-tooltip"
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #ccc",
          "margin": 0,
          "padding": 10,
          "whiteSpace": "nowrap",
        }
      }
    >
      <p
        className="recharts-tooltip-label"
        style={
          Object {
            "margin": 0,
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Mui-Recharts Area Light 1`] = `
<div
  className="recharts-wrapper makeStyles-rootChart-1"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "cursor": "default",
      "height": 575,
      "position": "relative",
      "width": 1572,
    }
  }
>
  <svg
    className="recharts-surface"
    height={575}
    version="1.1"
    viewBox="0 0 1572 575"
    width={1572}
  >
    <defs>
      <clipPath
        id="recharts3-clip"
      >
        <rect
          height={535}
          width={1502}
          x={65}
          y={5}
        />
      </clipPath>
    </defs>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={30}
        stroke="#666"
        width={1502}
        x={65}
        x1={65}
        x2={1567}
        y={540}
        y1={540}
        y2={540}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={65}
            x2={65}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={65}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={65}
            >
              Page A
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={315.33333333333337}
            x2={315.33333333333337}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={315.33333333333337}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={315.33333333333337}
            >
              Page B
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={565.6666666666667}
            x2={565.6666666666667}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={565.6666666666667}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={565.6666666666667}
            >
              Page C
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={816}
            x2={816}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={816}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={816}
            >
              Page D
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1066.3333333333335}
            x2={1066.3333333333335}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1066.3333333333335}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1066.3333333333335}
            >
              Page E
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1316.6666666666667}
            x2={1316.6666666666667}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1316.6666666666667}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1316.6666666666667}
            >
              Page F
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1567}
            x2={1567}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1567}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1567}
            >
              Page G
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={535}
        stroke="#666"
        width={60}
        x={5}
        x1={65}
        x2={65}
        y={5}
        y1={5}
        y2={540}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={540}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={540}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              0
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={406.25}
            y2={406.25}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={406.25}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              2500
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={272.5}
            y2={272.5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={272.5}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              5000
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={138.75}
            y2={138.75}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={138.75}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              7500
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={5}
            y2={5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={5}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              10000
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-area"
    >
      <g
        className="recharts-layer"
      >
        <defs>
          <clipPath
            id="animationClipPath-recharts-area-4"
          >
            <rect
              height={541}
              width={0}
              x={65}
              y={0}
            />
          </clipPath>
        </defs>
        <g
          className="recharts-layer"
          clipPath="url(#animationClipPath-recharts-area-4)"
        >
          <g
            className="recharts-layer"
            clipPath={null}
          >
            <path
              className="recharts-curve recharts-area-area"
              d="M65,411.59999999999997L315.33333333333337,465.207L565.6666666666667,15.70000000000001L816,330.92199999999997L1066.3333333333335,283.2L1316.6666666666667,336.7L1567,309.95L1567,540L1316.6666666666667,540L1066.3333333333335,540L816,540L565.6666666666667,540L315.33333333333337,540L65,540Z"
              fill="#8884d8"
              fillOpacity={0.6}
              height={535}
              stroke="none"
              width={1502}
            />
            <path
              className="recharts-curve recharts-area-curve"
              d="M65,411.59999999999997L315.33333333333337,465.207L565.6666666666667,15.70000000000001L816,330.92199999999997L1066.3333333333335,283.2L1316.6666666666667,336.7L1567,309.95"
              fill="none"
              fillOpacity={0.6}
              height={535}
              stroke="#8884d8"
              width={1502}
            />
          </g>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-area"
    >
      <g
        className="recharts-layer"
      >
        <defs>
          <clipPath
            id="animationClipPath-recharts-area-5"
          >
            <rect
              height={541}
              width={0}
              x={65}
              y={0}
            />
          </clipPath>
        </defs>
        <g
          className="recharts-layer"
          clipPath="url(#animationClipPath-recharts-area-5)"
        >
          <g
            className="recharts-layer"
            clipPath={null}
          >
            <path
              className="recharts-curve recharts-area-area"
              d="M65,326L315.33333333333337,379.5L565.6666666666667,433L816,391.27L1066.3333333333335,438.88499999999993L1316.6666666666667,412.135L1567,353.285L1567,540L1316.6666666666667,540L1066.3333333333335,540L816,540L565.6666666666667,540L315.33333333333337,540L65,540Z"
              fill="#82ca9d"
              fillOpacity={0.6}
              height={535}
              stroke="none"
              width={1502}
            />
            <path
              className="recharts-curve recharts-area-curve"
              d="M65,326L315.33333333333337,379.5L565.6666666666667,433L816,391.27L1066.3333333333335,438.88499999999993L1316.6666666666667,412.135L1567,353.285"
              fill="none"
              fillOpacity={0.6}
              height={535}
              stroke="#82ca9d"
              width={1502}
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
  <div
    className="recharts-tooltip-wrapper"
    style={
      Object {
        "MozTransform": "translate(undefinedpx, undefinedpx)",
        "OTransform": "translate(undefinedpx, undefinedpx)",
        "WebkitTransform": "translate(undefinedpx, undefinedpx)",
        "msTransform": "translate(undefinedpx, undefinedpx)",
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
        "transform": "translate(undefinedpx, undefinedpx)",
        "visibility": "hidden",
      }
    }
  >
    <div
      className="recharts-default-tooltip"
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #ccc",
          "margin": 0,
          "padding": 10,
          "whiteSpace": "nowrap",
        }
      }
    >
      <p
        className="recharts-tooltip-label"
        style={
          Object {
            "margin": 0,
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Mui-Recharts Bar Dark 1`] = `
<div
  className="recharts-wrapper makeStyles-rootChart-5"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "cursor": "default",
      "height": 575,
      "position": "relative",
      "width": 1572,
    }
  }
>
  <svg
    className="recharts-surface"
    height={575}
    version="1.1"
    viewBox="0 0 1572 575"
    width={1572}
  >
    <defs>
      <clipPath
        id="recharts23-clip"
      >
        <rect
          height={535}
          width={1502}
          x={65}
          y={5}
        />
      </clipPath>
    </defs>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={30}
        stroke="#666"
        width={1502}
        x={65}
        x1={65}
        x2={1567}
        y={540}
        y1={540}
        y2={540}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={172.28571428571428}
            x2={172.28571428571428}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={172.28571428571428}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={172.28571428571428}
            >
              Page A
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={386.85714285714283}
            x2={386.85714285714283}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={386.85714285714283}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={386.85714285714283}
            >
              Page B
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={601.4285714285714}
            x2={601.4285714285714}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={601.4285714285714}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={601.4285714285714}
            >
              Page C
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={816.0000000000001}
            x2={816.0000000000001}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={816.0000000000001}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={816.0000000000001}
            >
              Page D
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1030.5714285714287}
            x2={1030.5714285714287}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1030.5714285714287}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1030.5714285714287}
            >
              Page E
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1245.142857142857}
            x2={1245.142857142857}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1245.142857142857}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1245.142857142857}
            >
              Page F
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1459.7142857142858}
            x2={1459.7142857142858}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1459.7142857142858}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1459.7142857142858}
            >
              Page G
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={535}
        stroke="#666"
        width={60}
        x={5}
        x1={65}
        x2={65}
        y={5}
        y1={5}
        y2={540}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={540}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={540}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              0
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={406.25}
            y2={406.25}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={406.25}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              2500
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={272.5}
            y2={272.5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={272.5}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              5000
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={138.75}
            y2={138.75}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={138.75}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              7500
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={5}
            y2={5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={5}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              10000
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-bar"
    >
      <g
        className="recharts-layer recharts-bar-rectangles"
        clipPath={null}
      >
        <g
          className="recharts-layer"
        >
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-bar"
    >
      <g
        className="recharts-layer recharts-bar-rectangles"
        clipPath={null}
      >
        <g
          className="recharts-layer"
        >
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
        </g>
      </g>
    </g>
  </svg>
  <div
    className="recharts-tooltip-wrapper"
    style={
      Object {
        "MozTransform": "translate(undefinedpx, undefinedpx)",
        "OTransform": "translate(undefinedpx, undefinedpx)",
        "WebkitTransform": "translate(undefinedpx, undefinedpx)",
        "msTransform": "translate(undefinedpx, undefinedpx)",
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
        "transform": "translate(undefinedpx, undefinedpx)",
        "visibility": "hidden",
      }
    }
  >
    <div
      className="recharts-default-tooltip"
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #ccc",
          "margin": 0,
          "padding": 10,
          "whiteSpace": "nowrap",
        }
      }
    >
      <p
        className="recharts-tooltip-label"
        style={
          Object {
            "margin": 0,
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Mui-Recharts Bar Light 1`] = `
<div
  className="recharts-wrapper makeStyles-rootChart-2"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "cursor": "default",
      "height": 575,
      "position": "relative",
      "width": 1572,
    }
  }
>
  <svg
    className="recharts-surface"
    height={575}
    version="1.1"
    viewBox="0 0 1572 575"
    width={1572}
  >
    <defs>
      <clipPath
        id="recharts8-clip"
      >
        <rect
          height={535}
          width={1502}
          x={65}
          y={5}
        />
      </clipPath>
    </defs>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={30}
        stroke="#666"
        width={1502}
        x={65}
        x1={65}
        x2={1567}
        y={540}
        y1={540}
        y2={540}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={172.28571428571428}
            x2={172.28571428571428}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={172.28571428571428}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={172.28571428571428}
            >
              Page A
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={386.85714285714283}
            x2={386.85714285714283}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={386.85714285714283}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={386.85714285714283}
            >
              Page B
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={601.4285714285714}
            x2={601.4285714285714}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={601.4285714285714}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={601.4285714285714}
            >
              Page C
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={816.0000000000001}
            x2={816.0000000000001}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={816.0000000000001}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={816.0000000000001}
            >
              Page D
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1030.5714285714287}
            x2={1030.5714285714287}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1030.5714285714287}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1030.5714285714287}
            >
              Page E
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1245.142857142857}
            x2={1245.142857142857}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1245.142857142857}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1245.142857142857}
            >
              Page F
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1459.7142857142858}
            x2={1459.7142857142858}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1459.7142857142858}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1459.7142857142858}
            >
              Page G
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={535}
        stroke="#666"
        width={60}
        x={5}
        x1={65}
        x2={65}
        y={5}
        y1={5}
        y2={540}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={540}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={540}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              0
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={406.25}
            y2={406.25}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={406.25}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              2500
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={272.5}
            y2={272.5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={272.5}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              5000
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={138.75}
            y2={138.75}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={138.75}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              7500
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={5}
            y2={5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={5}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              10000
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-bar"
    >
      <g
        className="recharts-layer recharts-bar-rectangles"
        clipPath={null}
      >
        <g
          className="recharts-layer"
        >
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-bar"
    >
      <g
        className="recharts-layer recharts-bar-rectangles"
        clipPath={null}
      >
        <g
          className="recharts-layer"
        >
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
          <g
            className="recharts-layer recharts-bar-rectangle"
          />
        </g>
      </g>
    </g>
  </svg>
  <div
    className="recharts-tooltip-wrapper"
    style={
      Object {
        "MozTransform": "translate(undefinedpx, undefinedpx)",
        "OTransform": "translate(undefinedpx, undefinedpx)",
        "WebkitTransform": "translate(undefinedpx, undefinedpx)",
        "msTransform": "translate(undefinedpx, undefinedpx)",
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
        "transform": "translate(undefinedpx, undefinedpx)",
        "visibility": "hidden",
      }
    }
  >
    <div
      className="recharts-default-tooltip"
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #ccc",
          "margin": 0,
          "padding": 10,
          "whiteSpace": "nowrap",
        }
      }
    >
      <p
        className="recharts-tooltip-label"
        style={
          Object {
            "margin": 0,
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Mui-Recharts Line Dark 1`] = `
<div
  className="recharts-wrapper makeStyles-rootChart-6"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "cursor": "default",
      "height": 575,
      "position": "relative",
      "width": 1572,
    }
  }
>
  <svg
    className="recharts-surface"
    height={575}
    version="1.1"
    viewBox="0 0 1572 575"
    width={1572}
  >
    <defs>
      <clipPath
        id="recharts28-clip"
      >
        <rect
          height={535}
          width={1502}
          x={65}
          y={5}
        />
      </clipPath>
    </defs>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={30}
        stroke="#666"
        width={1502}
        x={65}
        x1={65}
        x2={1567}
        y={540}
        y1={540}
        y2={540}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={65}
            x2={65}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={65}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={65}
            >
              Page A
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={315.33333333333337}
            x2={315.33333333333337}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={315.33333333333337}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={315.33333333333337}
            >
              Page B
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={565.6666666666667}
            x2={565.6666666666667}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={565.6666666666667}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={565.6666666666667}
            >
              Page C
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={816}
            x2={816}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={816}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={816}
            >
              Page D
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1066.3333333333335}
            x2={1066.3333333333335}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1066.3333333333335}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1066.3333333333335}
            >
              Page E
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1316.6666666666667}
            x2={1316.6666666666667}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1316.6666666666667}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1316.6666666666667}
            >
              Page F
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1567}
            x2={1567}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1567}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1567}
            >
              Page G
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={535}
        stroke="#666"
        width={60}
        x={5}
        x1={65}
        x2={65}
        y={5}
        y1={5}
        y2={540}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={540}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={540}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              0
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={406.25}
            y2={406.25}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={406.25}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              2500
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={272.5}
            y2={272.5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={272.5}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              5000
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={138.75}
            y2={138.75}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={138.75}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              7500
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={5}
            y2={5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={5}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              10000
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-line"
    >
      <path
        className="recharts-curve recharts-line-curve"
        clipPath={null}
        d="M65,411.59999999999997L315.33333333333337,465.207L565.6666666666667,15.70000000000001L816,330.92199999999997L1066.3333333333335,283.2L1316.6666666666667,336.7L1567,309.95"
        fill="none"
        height={535}
        stroke="#8884d8"
        strokeDasharray="0px 0px"
        strokeWidth={1}
        width={1502}
      />
    </g>
    <g
      className="recharts-layer recharts-line"
    >
      <path
        className="recharts-curve recharts-line-curve"
        clipPath={null}
        d="M65,326L315.33333333333337,379.5L565.6666666666667,433L816,391.27L1066.3333333333335,438.88499999999993L1316.6666666666667,412.135L1567,353.285"
        fill="none"
        height={535}
        stroke="#82ca9d"
        strokeDasharray="0px 0px"
        strokeWidth={1}
        width={1502}
      />
    </g>
  </svg>
  <div
    className="recharts-tooltip-wrapper"
    style={
      Object {
        "MozTransform": "translate(undefinedpx, undefinedpx)",
        "OTransform": "translate(undefinedpx, undefinedpx)",
        "WebkitTransform": "translate(undefinedpx, undefinedpx)",
        "msTransform": "translate(undefinedpx, undefinedpx)",
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
        "transform": "translate(undefinedpx, undefinedpx)",
        "visibility": "hidden",
      }
    }
  >
    <div
      className="recharts-default-tooltip"
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #ccc",
          "margin": 0,
          "padding": 10,
          "whiteSpace": "nowrap",
        }
      }
    >
      <p
        className="recharts-tooltip-label"
        style={
          Object {
            "margin": 0,
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example/Mui-Recharts Line Light 1`] = `
<div
  className="recharts-wrapper makeStyles-rootChart-3"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "cursor": "default",
      "height": 575,
      "position": "relative",
      "width": 1572,
    }
  }
>
  <svg
    className="recharts-surface"
    height={575}
    version="1.1"
    viewBox="0 0 1572 575"
    width={1572}
  >
    <defs>
      <clipPath
        id="recharts13-clip"
      >
        <rect
          height={535}
          width={1502}
          x={65}
          y={5}
        />
      </clipPath>
    </defs>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={30}
        stroke="#666"
        width={1502}
        x={65}
        x1={65}
        x2={1567}
        y={540}
        y1={540}
        y2={540}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={65}
            x2={65}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={65}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={65}
            >
              Page A
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={315.33333333333337}
            x2={315.33333333333337}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={315.33333333333337}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={315.33333333333337}
            >
              Page B
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={565.6666666666667}
            x2={565.6666666666667}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={565.6666666666667}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={565.6666666666667}
            >
              Page C
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={816}
            x2={816}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={816}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={816}
            >
              Page D
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1066.3333333333335}
            x2={1066.3333333333335}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1066.3333333333335}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1066.3333333333335}
            >
              Page E
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1316.6666666666667}
            x2={1316.6666666666667}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1316.6666666666667}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1316.6666666666667}
            >
              Page F
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={30}
            stroke="#666"
            width={1502}
            x={65}
            x1={1567}
            x2={1567}
            y={540}
            y1={546}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={30}
            stroke="none"
            textAnchor="middle"
            width={1502}
            x={1567}
            y={548}
          >
            <tspan
              dy="0.71em"
              x={1567}
            >
              Page G
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
    >
      <line
        className="recharts-cartesian-axis-line"
        fill="none"
        height={535}
        stroke="#666"
        width={60}
        x={5}
        x1={65}
        x2={65}
        y={5}
        y1={5}
        y2={540}
      />
      <g
        className="recharts-cartesian-axis-ticks"
      >
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={540}
            y2={540}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={540}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              0
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={406.25}
            y2={406.25}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={406.25}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              2500
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={272.5}
            y2={272.5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={272.5}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              5000
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={138.75}
            y2={138.75}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={138.75}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              7500
            </tspan>
          </text>
        </g>
        <g
          className="recharts-layer recharts-cartesian-axis-tick"
        >
          <line
            className="recharts-cartesian-axis-tick-line"
            fill="none"
            height={535}
            stroke="#666"
            width={60}
            x={5}
            x1={59}
            x2={65}
            y={5}
            y1={5}
            y2={5}
          />
          <text
            className="recharts-text recharts-cartesian-axis-tick-value"
            fill="#666"
            height={535}
            stroke="none"
            textAnchor="end"
            width={60}
            x={57}
            y={5}
          >
            <tspan
              dy="0.355em"
              x={57}
            >
              10000
            </tspan>
          </text>
        </g>
      </g>
    </g>
    <g
      className="recharts-layer recharts-line"
    >
      <path
        className="recharts-curve recharts-line-curve"
        clipPath={null}
        d="M65,411.59999999999997L315.33333333333337,465.207L565.6666666666667,15.70000000000001L816,330.92199999999997L1066.3333333333335,283.2L1316.6666666666667,336.7L1567,309.95"
        fill="none"
        height={535}
        stroke="#8884d8"
        strokeDasharray="0px 0px"
        strokeWidth={1}
        width={1502}
      />
    </g>
    <g
      className="recharts-layer recharts-line"
    >
      <path
        className="recharts-curve recharts-line-curve"
        clipPath={null}
        d="M65,326L315.33333333333337,379.5L565.6666666666667,433L816,391.27L1066.3333333333335,438.88499999999993L1316.6666666666667,412.135L1567,353.285"
        fill="none"
        height={535}
        stroke="#82ca9d"
        strokeDasharray="0px 0px"
        strokeWidth={1}
        width={1502}
      />
    </g>
  </svg>
  <div
    className="recharts-tooltip-wrapper"
    style={
      Object {
        "MozTransform": "translate(undefinedpx, undefinedpx)",
        "OTransform": "translate(undefinedpx, undefinedpx)",
        "WebkitTransform": "translate(undefinedpx, undefinedpx)",
        "msTransform": "translate(undefinedpx, undefinedpx)",
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
        "transform": "translate(undefinedpx, undefinedpx)",
        "visibility": "hidden",
      }
    }
  >
    <div
      className="recharts-default-tooltip"
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #ccc",
          "margin": 0,
          "padding": 10,
          "whiteSpace": "nowrap",
        }
      }
    >
      <p
        className="recharts-tooltip-label"
        style={
          Object {
            "margin": 0,
          }
        }
      >
        
      </p>
    </div>
  </div>
</div>
`;
